tests/errors/sem.expected-const.enum-decl.or
main :: () -> void {
    enum {
        x = { x := 0; x; };
    };
};
